# omnifocus_cli

./: .cursorindexingignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  README.md  justfile  omnifocus.py  pyproject.toml
.cursor/rules/: global.mdc
.github/workflows/: test.yml
chop-logs/: tag-management-functions-implementation.md
cursor-logs/: rules-for-fixup-url-function.md  testing-recent-changes-in-code.md  updating-url-handling-in-omnifocus.md
cursor_logs/: adding-specstory-to-ignore-files.md  javascript-commands-in-omnifocus-structure.md
docs/PRD/: flagged-command-enhancement.md  interesting-command.md
tests/unit/: test_omnifocus.py
zz-chop-logs/: 2025-02-15_04-58-implementing-append-task-and-updating-tests.md  2025-03-06_06-19-omnifocus-cli-refactoring-plan.md  2025-03-06_06-53-omnifocusmanager-id-field-and-validation.md  2025-03-08_10-13-exploring-tag-functionality-in-codebase.md  2025-03-08_11-08-enhancing-project-with-rich-colors.md  2025-03-10_20-31-add-task-to-omnifocus.md  2025-05-26_17-32-python-clean-code-and-commit-guidelines.md  2025-05-26_18-47-prd-development-for-command-enhancement.md
