[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnifocus"
version = "0.1.0"
description = "Python interface for OmniFocus"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "icecream>=2.1.3",
    "pyperclip>=1.8.2",
    "typing-extensions>=4.8.0",
    "pydantic>=2.5.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.scripts]
omnifocus = "omnifocus:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.6",
]

[tool.ruff]
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

