[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnifocus"
version = "0.1.0"
description = "Python interface for OmniFocus"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]",
    "icecream",
    "pyperclip",
    "typing-extensions",
    "pydantic",
    "beautifulsoup4",
    "requests",
    "rich",
]

[project.scripts]
omnifocus = "omnifocus:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.6",
]

[tool.ruff]
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.6",
]

